// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddAssetSearch.vue [Empty Search Input]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value=""
  />
   
  <div
    class="asset-list-wrapper asset-search-list"
  >
    <div
      class="vue-recycle-scroller asset-list el-scrollbar direction-vertical"
    >
      <!---->
       
      <div
        class="vue-recycle-scroller__item-wrapper"
        style="min-height: 0px;"
      />
       
      <!---->
       
      <div
        class="resize-observer"
        data-v-b329ee4c=""
        tabindex="-1"
      >
        <object
          aria-hidden="true"
          data="about:blank"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [No Tokens Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="123456"
  />
   
  <div
    class="asset-list-wrapper asset-search-list"
  >
    <div
      class="vue-recycle-scroller asset-list el-scrollbar direction-vertical"
    >
      <div
        class="vue-recycle-scroller__slot"
      >
        <div
          class="asset-list-empty"
        >
          
      No tokens found
    
        </div>
      </div>
       
      <div
        class="vue-recycle-scroller__item-wrapper"
        style="min-height: 0px;"
      />
       
      <!---->
       
      <div
        class="resize-observer"
        data-v-b329ee4c=""
        tabindex="-1"
      >
        <object
          aria-hidden="true"
          data="about:blank"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AddAssetSearch.vue [Token is Found]: should be rendered correctly 1`] = `
<div
  class="asset-search"
>
  <s-input-stub
    accept=""
    autocomplete="off"
    borderradius="small"
    class="asset-search-input"
    form=""
    label=""
    maxlength="100"
    name=""
    placeholder="Filter by Asset ID, Name or Ticker Symbol"
    prefix="s-icon-search-16"
    rows="2"
    size="big"
    suffix=""
    tabindex=""
    type="text"
    usedesignsystem="true"
    value="TEST"
  />
   
  <div
    class="asset-list-wrapper asset-search-list"
  >
    <div
      class="vue-recycle-scroller asset-list el-scrollbar direction-vertical"
    >
      <!---->
       
      <div
        class="vue-recycle-scroller__item-wrapper"
        style="min-height: 0px;"
      />
       
      <!---->
       
      <div
        class="resize-observer"
        data-v-b329ee4c=""
        tabindex="-1"
      >
        <object
          aria-hidden="true"
          data="about:blank"
          tabindex="-1"
          type="text/html"
        />
      </div>
    </div>
  </div>
</div>
`;
